fixed video and padding on mobiles

--- a/css/mysitev2.css
+++ b/css/mysitev2.css
@@ -74,8 +74,8 @@ body {
     margin-top: 100px;
 }
 .padTopBot {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 h2 {
     font-size: 28px;
@@ -117,9 +117,9 @@ p {
     transition-duration: 700ms;
 }
 
+/* VIDEO */
 .yt-video {
-    height: 300px;
-    width: 500px;
+    margin: auto auto;
 }
 
 /* ANIMATION */
